--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ st-gsheets-connection==0.1.0
 pandas==2.2.3
 openpyxl==3.1.5
 pillow==11.2.1
+supabase-py==0.7.0
+streamlit-extras==0.2.0
+streamlit-plotly-events==0.2.1
+streamlit-gsheets-connection==0.1.0
+google-auth==2.40.1      # pulled by gsheets connection, but list explicitly
+google-api-python-client==2.169.0  # same
+requests==2.32.3
+cryptography==44.0.3      # for jwt in Supabase
