--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 streamlit==1.45.0
 supabase==2.15.1
-st-gsheets-connection==0.1.0
 pandas==2.2.3
-openpyxl==3.1.5
-pillow==11.2.1
-google-auth==2.40.1
-google-api-python-client==2.169.0
-requests==2.32.3
-cryptography==44.0.3
+google-auth-oauthlib==1.2.2  
+gspread==5.7.2
+google-auth==2.24.0
+oauth2client==4.1.3
+pytesseract==0.3.10
+Pillow==9.5.0
